# docviewer

./: Cargo.toml  README.md  default.nix  flake.nix
prototype/: docviewer.cmb
share/: app.css
src/: main.rs
