[package]
name = "docviewer"
version = "0.1.0"
edition = "2024"

[dependencies]
adw = { version = "0.7.2", package = "libadwaita", features = ["v1_6"] }
glib = { version = "0.20.9", features = ["v2_82"] }
relm4 = { version = "0.9.1", features = ["libadwaita", "gnome_45"] }
relm4-components = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["sync", "macros"] }
tracker = "0.2.2"
webkit6 = "0.4.0"
